@@ -24,7 +24,7 @@ public class ConverterTest
 	@BeforeAll
 	public static void setUp()
 	{
-		Locale.setDefault(new Locale("pt", "br"));
+		Locale.setDefault(Locale.of("pt", "br"));
 	}
 
 	@Test
