@@ -12,7 +12,7 @@ public class ConvertersTest
 	@BeforeAll
 	public static void setUp()
 	{
-		Locale.setDefault(new Locale("pt", "br"));
+		Locale.setDefault(Locale.of("pt", "br"));
 	}
 
 	@Test
